[metadata]
name = redaql
author = denzow
author_email = denzow@gmail.com
description = redash sql cli client
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/denzow/redaql
licence = file: LICENCE
python_requires = >=3.7
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
